--- a/index.html
+++ b/index.html
@@ -22,46 +22,47 @@
 
       <div class="questions" id="myForm">
 
-      <h2 id="#timer">Time Remaining</h2>
+      <h2 id="#timer"></h2>
+
       <br>
 
         <h3>Where do the Cubs play their home games?</h3>
         <br>
 
-        <div class="form-check form-check-inline" >
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="rightAnswerButton" value="right">
+        <div class="form-check form-check-inline" id="question1">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="right">
           <label class="form-check-label" for="inlineRadio1">Wrigley Field</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="wrongAnswerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="wrong">
           <label class="form-check-label" for="inlineRadio2">Target Field</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="wrongAnswerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="wrong">
           <label class="form-check-label" for="inlineRadio3">Cubs Park</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="wrongAnswerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="wrong">
           <label class="form-check-label" for="inlineRadio4">Fenway Park</label>
         </div>
 
         <h3>What year did the Cubs win their first World Series?</h3>
         <br>
 
-        <div class="form-check form-check-inline" >
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="rightAnswerButton2" value="right">
+        <div class="form-check form-check-inline" id="question2">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="right">
           <label class="form-check-label" for="inlineRadio1">1907</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="wrongAnswerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="wrong">
           <label class="form-check-label" for="inlineRadio2">1908</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="wrongAnswerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="wrong">
           <label class="form-check-label" for="inlineRadio3">2016</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="wrongAnswerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="wrong">
           <label class="form-check-label" for="inlineRadio4">1982</label>
         </div>
 
@@ -74,7 +75,7 @@
     <div id="results">
       <p id="rightText"></p>
       <p id="wrongText"></p>
-      <p id="unansweredText"></p>      
+      <p id="unansweredText"></p>
     </div>
 
   </div>
