--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <div class="container">
-    <h1>Cool Chicago Cubs Trivia</h1>
+    <h1>Chicago Cubs Trivia</h1>
     <br>
 
     <div id="start">
@@ -22,48 +22,98 @@
 
       <div class="questions" id="myForm">
 
-      <h2 id="#timer"></h2>
+      <h2 id="timer"></h2>
 
       <br>
 
         <h3>Where do the Cubs play their home games?</h3>
-        <br>
-
         <div class="form-check form-check-inline" id="question1">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="right">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton1" value="right">
           <label class="form-check-label" for="inlineRadio1">Wrigley Field</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton1" value="wrong">
           <label class="form-check-label" for="inlineRadio2">Target Field</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton1" value="wrong">
           <label class="form-check-label" for="inlineRadio3">Cubs Park</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions" id="answerButton1" value="wrong">
           <label class="form-check-label" for="inlineRadio4">Fenway Park</label>
         </div>
 
         <h3>What year did the Cubs win their first World Series?</h3>
-        <br>
-
         <div class="form-check form-check-inline" id="question2">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="right">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton2" value="right">
           <label class="form-check-label" for="inlineRadio1">1907</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton2" value="wrong">
           <label class="form-check-label" for="inlineRadio2">1908</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton2" value="wrong">
           <label class="form-check-label" for="inlineRadio3">2016</label>
         </div>
         <div class="form-check form-check-inline">
-          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton" value="wrong">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions2" id="answerButton2" value="wrong">
           <label class="form-check-label" for="inlineRadio4">1982</label>
+        </div>
+
+        <h3>Who currently wears #17 for the Cubs?</h3>
+        <div class="form-check form-check-inline" id="question3">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="answerButton3" value="wrong">
+          <label class="form-check-label" for="inlineRadio1">Anthony Rizzo</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="answerButton3" value="right">
+          <label class="form-check-label" for="inlineRadio2">Kris Bryant</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="answerButton3" value="wrong">
+          <label class="form-check-label" for="inlineRadio3">Ryne Sandberg</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions3" id="answerButton3" value="wrong">
+          <label class="form-check-label" for="inlineRadio4">Bill Murray</label>
+        </div>
+
+        <h3>What song is played when the Cubs win a game?</h3>
+        <div class="form-check form-check-inline" id="question4">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions4" id="answerButton4" value="wrong">
+          <label class="form-check-label" for="inlineRadio4">I'm Too Sexy</label>
+        </div>
+        <div class="form-check form-check-inline" id="question4">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions4" id="answerButton4" value="wrong">
+          <label class="form-check-label" for="inlineRadio4">We Are The Champions</label>
+        </div>
+        <div class="form-check form-check-inline" id="question4">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions4" id="answerButton4" value="wrong">
+          <label class="form-check-label" for="inlineRadio4">Take Me Out To The Ballgame</label>
+        </div>
+        <div class="form-check form-check-inline" id="question4">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions4" id="answerButton4" value="right">
+          <label class="form-check-label" for="inlineRadio4">Go Cubs Go</label>
+        </div>
+
+        <h3>What is the name of the Cubs mascot</h3>
+        <div class="form-check form-check-inline" id="question5">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions5" id="answerButton5" value="wrong">
+          <label class="form-check-label" for="inlineRadio5">Chicago Bear</label>
+        </div>
+        <div class="form-check form-check-inline" id="question5">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions5" id="answerButton5" value="wrong">
+          <label class="form-check-label" for="inlineRadio5">Yogi</label>
+        </div>
+        <div class="form-check form-check-inline" id="question5">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions5" id="answerButton5" value="right">
+          <label class="form-check-label" for="inlineRadio5">Clark</label>
+        </div>
+        <div class="form-check form-check-inline" id="question5">
+          <input class="form-check-input" type="radio" name="inlineRadioOptions5" id="answerButton5" value="wrong">
+          <label class="form-check-label" for="inlineRadio5">Cubbie</label>
         </div>
 
       </div>
